# qt_quick

./: .gitignore  README.md
AbstractListModel/: CMakeLists.txt  Main.qml  README.md  main.cpp  person.cpp  person.h  personmodel.cpp
EditableObjectListModel/: CMakeLists.txt  Main.qml  README.md  main.cpp  objectlistwrapper.cpp  objectlistwrapper.h  person.cpp
EditableObjectListModelQproperty/: CMakeLists.txt  Main.qml  README.md  objectlistwrapper.cpp  objectlistwrapper.h  person.h
ExternalDataSource/: CMakeLists.txt  Main.qml  README.md  main.cpp  personmodel.cpp  personmodel.h
FinalArchitecture/: CMakeLists.txt  Main.qml  README.md  appwrapper.cpp  appwrapper.h  datasource.cpp  datasource.h  joke.cpp  joke.h  jokemodel.cpp  jokemodel.h  main.cpp
ModelListProperties/: CMakeLists.txt  Main.qml  main.cpp
ObjectListModel/: CMakeLists.txt  Main.qml  README.md  main.cpp  person.cpp
StringListModel/: CMakeLists.txt  Main.qml  README.md  main.cpp
